Update 빈 생성 원리 정리 순서.md
스프링 부트 동작 원리(빈 생성 원리)

--- a/정리/빈 생성 원리 정리 순서.md
+++ b/정리/빈 생성 원리 정리 순서.md
@@ -1,5 +1,15 @@
 ## 빈 생성 원리 정리 순서.
 
+1. 내장 톰캣 및 내장 서블릿 컨테이너 관리 진행
+2. web.xml 실행 → 세션 유효시간 설정, 서블릿 매핑, 에러메시지 처리, 필터와 리스너 설정, 보안 설정
+3. ContextLoaderListener(root-context - 부모) → DB 연결 및 객체 생성
+4. ApplicationContext 실행 → root-applicationContext(@Service, @Repository 스캔 후 DB 관련 객체 생성, ioc역할) → 컨트롤러 실행되기 전 메모리에 있어야 함
+5. DispatcherServlet(servlet-context 자식) → Ioc(ApplicationContext)에 의해 객체 생성(ApplicationContext에서 관리)
+6. ApplicationContext 실행 → servlet-applicatoinContext(viewResolver, interceptor 객체 생성 및 웹과 관련된 @Controller, @RestController 스캔)
+7. Handler Mapping → 사용자 요청에 따른 적절한 컨트롤러를 DispatcherServlet에 의해 찾음 | DispatcherServlet이 Handler Mapping 활용
+빈 생성 시 빈 찾을 때 → servlet applicationContext → 없으면 → root applicatoin Context
+
+
 ---
 ### 어노테이션 및 빈 이란, 빈의 생성 구조
 
